Fix section height on mobile device

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -52,7 +52,8 @@ h1.section-title {
 /* Стили для каждой секции  */
 section {
 	width: 100%;
-	height: 100vh;
+	min-height: 100vh;
+	height: 100%;
 }
 
 
